@@ -29,6 +29,9 @@ Core
 
   Thanks to David Christensen <david@endpoint.com> for the fix.
 
+* Add new SessionCookieSecure boolean catalog directive. When enabled, makes
+  session cookie set in https usable only in https.
+
 
 ------------------------------------------------------------------------------
 
